add the ne prices

--- a/index.html
+++ b/index.html
@@ -867,64 +867,65 @@
     </footer>
 
     <script>
-        const services = [
-            {
-                title: "Trading Platform",
-                image: "https://images.unsplash.com/photo-1611974789855-9c2a0a7236a3?ixlib=rb-4.0.3&auto=format&fit=crop&w=1170&q=80",
-                description: "Professional trading platform with real-time analytics, secure transactions, and comprehensive market insights.",
-                oldPrice: "$299",
-                newPrice: "$199",
-                discount: "33% OFF"
-            },
-            {
-                title: "Optimisation Services",
-                image: "https://images.unsplash.com/photo-1552664730-d307ca884978?ixlib=rb-4.0.3&auto=format&fit=crop&w=1170&q=80",
-                description: "Complete optimization solutions for maximum performance and efficiency improvements.",
-                oldPrice: "$249",
-                newPrice: "$179",
-                discount: "28% OFF"
-            },
-            {
-                title: "E-commerce Solution",
-                image: "https://images.unsplash.com/photo-1556742049-0cfed4f6a45d?ixlib=rb-4.0.3&auto=format&fit=crop&w=1170&q=80",
-                description: "Full e-commerce platform with payment integration, inventory management, and customer dashboard.",
-                oldPrice: "$499",
-                newPrice: "$349",
-                discount: "30% OFF"
-            },
-            {
-                title: "Video Call System",
-                image: "https://images.unsplash.com/photo-1580894732444-8ecded7900cd?ixlib=rb-4.0.3&auto=format&fit=crop&w=1170&q=80",
-                description: "HD video call solution with screen sharing, recording, and multi-user support capabilities.",
-                oldPrice: "$179",
-                newPrice: "$129",
-                discount: "28% OFF"
-            },
-            {
-                title: "Advertising Campaign",
-                image: "https://images.unsplash.com/photo-1563986768609-322da13575f3?ixlib=rb-4.0.3&auto=format&fit=crop&w=1170&q=80",
-                description: "Targeted advertising campaigns across social media and search engines for maximum reach.",
-                oldPrice: "$399",
-                newPrice: "$299",
-                discount: "25% OFF"
-            },
-            {
-                title: "WhatsApp Numbers",
-                image: "https://images.unsplash.com/photo-1611605698335-8b1569810432?ixlib=rb-4.0.3&auto=format&fit=crop&w=1074&q=80",
-                description: "Professional software for generating and managing WhatsApp numbers for business communication.",
-                oldPrice: "$159",
-                newPrice: "$119",
-                discount: "25% OFF"
-            },
-            {
-                title: "Receipt Editing",
-                image: "https://images.unsplash.com/photo-1586282391129-76a6df230234?ixlib=rb-4.0.3&auto=format&fit=crop&w=1170&q=80",
-                description: "Advanced software for editing and customizing digital receipts and invoices with multiple formats.",
-                oldPrice: "$129",
-                newPrice: "$89",
-                discount: "31% OFF"
-            }
-        ];
+ const services = [
+    {
+        title: "Trading Platform",
+        image: "https://images.unsplash.com/photo-1611974789855-9c2a0a7236a3?ixlib=rb-4.0.3&auto=format&fit=crop&w=1170&q=80",
+        description: "Professional trading platform with real-time analytics, secure transactions, and comprehensive market insights.",
+        oldPrice: "$2999",
+        newPrice: "$1999",
+        discount: "33% OFF"
+    },
+    {
+        title: "Optimisation Platform",
+        image: "https://images.unsplash.com/photo-1552664730-d307ca884978?ixlib=rb-4.0.3&auto=format&fit=crop&w=1170&q=80",
+        description: "Complete optimization solutions for maximum performance and efficiency improvements.",
+        oldPrice: "$2490",
+        newPrice: "$1100",
+        discount: "56% OFF"
+    },
+    {
+        title: "E-commerce Solution",
+        image: "https://images.unsplash.com/photo-1556742049-0cfed4f6a45d?ixlib=rb-4.0.3&auto=format&fit=crop&w=1170&q=80",
+        description: "Full e-commerce platform with payment integration, inventory management, and customer dashboard.",
+        oldPrice: "$1600",
+        newPrice: "$1000",
+        discount: "38% OFF"
+    },
+    {
+        title: "Fake Video Call with AI ",
+        image: "https://images.unsplash.com/photo-1580894732444-8ecded7900cd?ixlib=rb-4.0.3&auto=format&fit=crop&w=1170&q=80",
+        description: "HD video call solution with screen sharing, recording, and multi-user support capabilities.",
+        oldPrice: "$200",
+        newPrice: "$100",
+        discount: "50% OFF"
+    },
+    {
+        title: "Advertising Campaign",
+        image: "https://images.unsplash.com/photo-1563986768609-322da13575f3?ixlib=rb-4.0.3&auto=format&fit=crop&w=1170&q=80",
+        description: "Targeted advertising campaigns across social media and search engines for maximum reach.",
+        oldPrice: "$399",
+        newPrice: "$299",
+        discount: "25% OFF"
+    },
+    {
+        title: "WhatsApp Generators",
+        image: "https://images.unsplash.com/photo-1611605698335-8b1569810432?ixlib=rb-4.0.3&auto=format&fit=crop&w=1074&q=80",
+        description: "Professional software for generating WhatsApp numbers from any country in the world.",
+        oldPrice: "$829",
+        newPrice: "$400",
+        discount: "52% OFF"
+    },
+    {
+        title: "Receipt Editing",
+        image: "https://images.unsplash.com/photo-1586282391129-76a6df230234?ixlib=rb-4.0.3&auto=format&fit=crop&w=1170&q=80",
+        description: "Advanced software for editing and customizing digital receipts and invoices with multiple formats. (Crypto, Bank statment , ... ) with option to take a screenshot",
+        oldPrice: "$300",
+        newPrice: "$200",
+        discount: "33% OFF"
+    }
+];
+
 
         document.addEventListener('DOMContentLoaded', function() {
             const container = document.getElementById('servicesContainer');
