add the new services

--- a/index.html
+++ b/index.html
@@ -890,7 +890,7 @@
          {
                 title: "Fake Video Call with AI ",
                 image: "./swap.jpg",
-                description: "HD video call solution with screen sharing, recording, and multi-user support capabilities.",
+                description: "We will teach you how to change your face during the call, and we will provide the software free of charge. ",
                 oldPrice: "$200",
                 newPrice: "$100",
                 discount: "50% OFF"
