add the images and change the description

--- a/index.html
+++ b/index.html
@@ -669,23 +669,17 @@
             <div class="trust-badges">
                 <div class="trust-badge">
                     <i class="fas fa-check-circle"></i>
-                    <span>Verified Services</span>
+                    <span>Trusted by 500+ Clients</span>
+
                 </div>
                 <div class="trust-badge">
                     <i class="fas fa-clock"></i>
                     <span>24/16 Support</span>
                 </div>
-                <div class="trust-badge">
-                    <i class="fas fa-user-shield"></i>
-                    <span>Secure Payment</span>
-                </div>
+
             </div>
 
-            <nav>
-                <a href="#services">Services</a>
-                <a href="#trust">Why Us</a>
-                <a href="#contact">Contact</a>
-            </nav>
+
         </div>
     </header>
 
@@ -887,7 +881,7 @@
         const services = [
 
 
-         {
+            {
                 title: "Fake Video Call with AI ",
                 image: "./swap.jpg",
                 description: "We will teach you how to change your face during the call, and we will provide the software free of charge. ",
@@ -935,7 +929,7 @@
                 newPrice: "$1000",
                 discount: "38% OFF"
             },
-           
+
             {
                 title: "Receipt Editing",
                 image: "./print.jpg",
