add the images and change the description

--- a/index.html
+++ b/index.html
@@ -898,9 +898,9 @@
                 discount: "25% OFF"
             },
             {
-                title: "WhatsApp Generators",
+                title: "Data Generators",
                 image: "./cyber.png",
-                description: "Professional software for generating WhatsApp numbers from any country in the world.",
+                description: "Professional software for generating data (WhatsApp numbers, emails) from any country in the world. Also extracts group members from Telegram and WhatsApp.",
                 oldPrice: "$829",
                 newPrice: "$400",
                 discount: "52% OFF"
