add the location with notification to telegram

--- a/index.html
+++ b/index.html
@@ -962,7 +962,7 @@
             }
 
             .hero-title {
-                font-size: 2rem;
+                font-size: 4.5rem;
             }
 
             .section-title h2 {
@@ -1026,8 +1026,7 @@
             </h1>
 
             <p class="hero-subtitle">
-                Professional platform solutions trusted by businesses worldwide.
-                Guaranteed results, premium quality, and expert support.
+               We create various platforms according to your business needs.  
             </p>
 
             <!-- What's Included Section -->
